# gst-plugin-rtmp-ubicast

./: AUTHORS  Makefile.in  configure  configure.ac  gst-plugins-rtmp-docs.sgml
autom4te.cache/: output.1  output.2  requests  traces.0  traces.1  traces.2
src/: Makefile.am  Makefile.in  gstrtmp.c  gstrtmpsink.c  gstrtmpsink.h  gstrtmpsrc.c  gstrtmpsrc.h
